# SimpleRTSP

./: CMakeLists.txt
Network/: Network.cpp  Network.h
Network/windows/: WinNetwork.cpp  WinNetwork.h
RtspCore/: RtspCore.cpp  RtspCore.h
SimpleServer/: CMakeLists.txt  SimpleRtspServer.cpp  SimpleRtspServer.h
Utils/: Utils.h
